--- a/src/index.css
+++ b/src/index.css
@@ -91,6 +91,7 @@
   }
   .theme {
     --animate-grid: grid 15s linear infinite;
+    --animate-border-beam: border-beam calc(var(--duration)*1s) infinite linear;
   }
 }
 
@@ -110,6 +111,11 @@
     }
   100% {
     transform: translateY(0);
+    }
+  }
+  @keyframes border-beam {
+  100% {
+    offset-distance: 100%;
     }
   }
 }
