--- a/src/components/hero/styles/hero.css
+++ b/src/components/hero/styles/hero.css
@@ -56,6 +56,7 @@
   border-radius: 50%;  /* Changed from 10px to 50% to make it circular */
   box-shadow: 0px 5px 10px rgba(0,0,0,0.07);
   background: rgba(255, 255, 255, 0.6);
+  -webkit-backdrop-filter: blur(4px);
   backdrop-filter: blur(4px);
   transition: 0.3s;
   display: flex;
