--- a/src/index.css
+++ b/src/index.css
@@ -151,3 +151,8 @@
     }
   }
 }
+
+::view-transition-old(root), ::view-transition-new(root) {
+    animation: none;
+    mix-blend-mode: normal;
+}
